# fast-mixer

./: .gitattributes  .gitmodules  LICENSE  README.md  build.gradle  local.example.properties  settings.gradle
app/: .gitignore  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Constants.h  LivePlaybackCallback.cpp  LivePlaybackCallback.h  PlaybackCallback.cpp  PlaybackCallback.h  RecordingCallback.cpp  RecordingCallback.h  RecordingIO.cpp  RecordingIO.h  SoundIO.cpp  SoundIO.h  SoundRecording.cpp  SoundRecording.h  SourceMapStore.cpp  SourceMapStore.h  StreamProcessor.cpp  StreamProcessor.h  Utils.h  jni_env.h  jvm_env.h  logging_macros.h  native-lib.cpp  structs.h
app/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  BufferedDataSource.cpp  BufferedDataSource.h  DataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h  FFMpegExtractorBak.cpp  FFMpegExtractorBak.h  FileDataSource.cpp  FileDataSource.h  IRenderableAudio.h  MixedAudioWriter.cpp  MixedAudioWriter.h  Player.cpp  Player.h  SourceStore.cpp  SourceStore.h
app/src/main/cpp/ffmpeg-build/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libswresample.pc
app/src/main/cpp/ffmpeg-build/armeabi-v7a/lib/pkgconfig/: libavformat.pc  libavutil.pc  libswresample.pc
app/src/main/cpp/ffmpeg-build/x86/lib/pkgconfig/: libavdevice.pc  libavformat.pc
app/src/main/cpp/ffmpeg-build/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswscale.pc
app/src/main/cpp/mixing/: MixingEngine.cpp  MixingEngine.h  MixingIO.cpp  MixingIO.h  StreamConstants.cpp  StreamConstants.h  mixing-lib.cpp  mixing_jvm_env.h
app/src/main/cpp/mixing/streams/: MixingBaseStream.cpp  MixingBaseStream.h  MixingPlaybackStream.cpp  MixingPlaybackStream.h  MixingStreamConstants.cpp  MixingStreamConstants.h  PlaybackStream.cpp  PlaybackStream.h  StreamConstants.cpp  StreamConstants.h
app/src/main/cpp/mixing/utils/: structs.h
app/src/main/cpp/recording/: RecordingEngine.cpp  RecordingEngine.h  RecordingIO.cpp  RecordingIO.h  native-lib.cpp  recording-lib.cpp  recording_jvm_env.h
app/src/main/cpp/recording/streams/: LivePlaybackStream.cpp  LivePlaybackStream.h  PlaybackStream.cpp  PlaybackStream.h  RecordingBaseStream.cpp  RecordingBaseStream.h  RecordingStream.cpp  RecordingStream.h  RecordingStreamConstants.cpp  RecordingStreamConstants.h  StreamConstants.cpp  StreamConstants.h
app/src/main/cpp/recording/utils/: structs.h
app/src/main/cpp/streams/: BaseStream.cpp  BaseStream.h  LivePlaybackStream.cpp  LivePlaybackStream.h  PlaybackStream.cpp  PlaybackStream.h  RecordingStream.cpp  RecordingStream.h  StreamConstants.cpp
app/src/main/cpp/synthesizers/: BaseSynthesizer.h  GainAdjustment.cpp  GainAdjustment.h  HighPassFilter.cpp  HighPassFilter.h  LowPassFilter.cpp  LowPassFilter.h
app/src/main/cpp/taskqueue/: TaskQueue.h
app/src/main/cpp/utils/: Utils.h
app/src/main/res/color/: menu_action_color.xml  menu_action_color_record.xml  pause_button_color.xml  play_button_color.xml
app/src/main/res/drawable/: arrow_left_button.xml  arrow_right_button.xml  audio_segment_selector_left_circle.xml  audio_segment_selector_right_circle.xml  audio_widget_border.xml  audio_widget_menu_button.xml  audio_widget_slider_button.xml  audio_widget_slider_line.xml  audio_widget_slider_triangle.xml  audio_widget_slider_triangle_button.xml  audio_widget_slider_triangle_pressed.xml  bg_loading_progress.xml  bottom_sheet_handle.xml  circular_button_background.xml  delete_button.xml  drawer_control_button_close.xml  drawer_control_button_open.xml  gain_selector.xml  group_pause_button.xml  group_play_button.xml  group_reset_button.xml  group_zoom_in_button.xml  group_zoom_out_button.xml  ic_baseline_content_paste_30.xml  ic_baseline_content_paste_pressed_30.xml  ic_baseline_crop_20.xml  ic_baseline_crop_pressed_20.xml  ic_baseline_delete_20.xml  ic_baseline_delete_gray_20.xml  ic_baseline_delete_pressed_20.xml  ic_baseline_done_24.xml  ic_baseline_expand_less_24.xml  ic_baseline_expand_less_dark_24.xml  ic_baseline_expand_less_pressed_24.xml  ic_baseline_expand_more_24.xml  ic_baseline_expand_more_dark_24.xml  ic_baseline_expand_more_pressed_24.xml  ic_baseline_fiber_manual_record_24.xml  ic_baseline_fiber_manual_record_32.xml  ic_baseline_fiber_manual_record_40.xml  (+53 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  audio_segment_selector.xml  audio_widget_slider.xml  bottom_drawer.xml  custom_scroll_bar.xml  file_wave_view_widget.xml  gain_adjustment_dialog.xml  group_control_button.xml  list_item_audio_file.xml  mixing_fragment.xml  mixing_screen.xml  play_fragment.xml  recording_fragment.xml  recording_screen.xml  segment_adjustment_dialog.xml  shift_dialog.xml  splash_screen.xml  view_loading.xml  visualizer_fragment.xml  write_dialog.xml
app/src/main/res/menu/: mixing_screen_menu.xml  recording_screen_menu.xml  waveview_drop_up_menu.xml
app/src/main/res/navigation/: main_navigation.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  colors_pallete.xml  dimens.xml  ic_launcher_background.xml  integers.xml  strings.xml  styles.xml
app/src/main/res/values-land/: dimens.xml
assets/: ffmpeg-build.sh
cpp_dependencies/ffmpeg-build/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
cpp_dependencies/ffmpeg-build/armeabi-v7a/include/libavutil/: ffversion.h
cpp_dependencies/ffmpeg-build/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
cpp_dependencies/ffmpeg-build/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
cpp_dependencies/ffmpeg-scripts/: ffmpeg-build.sh
gradle/wrapper/: gradle-wrapper.properties
scripts/: android_symbolize.sh
(+210 files in other folders)
